cmake_minimum_required(VERSION 3.10)
project(DB)
#   Boost
#set(Boost_INCLUDE_DIR external/boost)
#set(Boost_LIBRARY_DIR external/boost/stage/lib)
#find_package(Boost 1.72.0 COMPONENTS)
#include_directories(external/boost)

#find_package(Libevent REQUIRED)
#set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
#set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
#set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
#find_library(LIBEVENT2_CORE event_core)
#include_directories(include)
#set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_STANDARD_REQUIRED on)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

set(CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_FLAGS "-L /root/linuxb/boost_1_72_0 -pthread -levent")
add_executable(DB main.cpp multiplex/select.cpp multiplex/poll.cpp multiplex/chat/server.cpp multiplex/chat/client.cpp async_libraries/llibevent.cpp)
add_executable(SharedPtr shared_ptr.cpp)
add_executable(sockets_server sockets/server.cpp)
add_executable(sockets_client sockets/client.cpp)
add_executable(multiplex_select multiplex/select.cpp)
add_executable(multiplex_poll multiplex/poll.cpp)
add_executable(multiplex_epoll multiplex/epoll.cpp)
add_executable(multiplex_chat_server multiplex/chat/server.cpp)
add_executable(async-libraries_libevent async_libraries/llibevent.cpp)

add_executable(PChS_pipe PChS/pipe.cpp)
add_executable(PChS_pid PChS/pid.cpp)
add_executable(PChS_zombie PChS/zobmie.cpp)
add_executable(PChS_pipe2 PChS/pipe2.c)
add_executable(PChS_pipe0 PChS/pipe0.c)
add_executable(PChS_named_pipe PChS/named_pipe.c)
add_executable(PChS_named_pipe2 PChS/named_pipe_2.c)

#target_link_libraries(async-libraries_libevent ${LIBEVENT2_CORE})
target_link_libraries(async-libraries_libevent event_core)
